[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/cage.png" type="Texture" id=1]
[ext_resource path="res://Comfortaa-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Cage.gd" type="Script" id=3]
[ext_resource path="res://Sprites/sprite_56.png" type="Texture" id=4]
[ext_resource path="res://Sprites/sprite_57.png" type="Texture" id=5]
[ext_resource path="res://Sprites/GUI/B.png" type="Texture" id=6]
[ext_resource path="res://Sprites/GUI/B_key.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "dance",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 51.3127, 47.4556 )

[sub_resource type="DynamicFont" id=3]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Cage" type="Area2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.123909, 8.02378 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="Cage" type="Sprite" parent="."]
modulate = Color( 0.74902, 0.74902, 0.74902, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.157494, -15.4792 )
shape = SubResource( 2 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -110.01
margin_top = -103.045
margin_right = 109.99
margin_bottom = -54.0445
custom_fonts/font = SubResource( 3 )
text = " .  per obrir la gàbia
[420 ànimes]"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B" type="Sprite" parent="Label"]
position = Vector2( 12.3902, 12.7395 )
scale = Vector2( 1.911, 1.911 )
texture = ExtResource( 6 )

[node name="B_key" type="Sprite" parent="Label"]
visible = false
position = Vector2( 12.3776, 12.9412 )
scale = Vector2( 1.675, 1.675 )
texture = ExtResource( 7 )

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Cage_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Cage_body_exited"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
